deployments/wordpress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: ing-wordpress
  labels:
      name: ing-wordpress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: svc-wordpress
          servicePort: 80
